--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -157,15 +157,15 @@
   display: flex;
   align-items: center;
 
+  &__link {
+    margin-right: 1.4rem;
+  }
+
   &__icon {
     width: 2rem;
     height: 2rem;
     fill: var(--color-primary);
     cursor: pointer;
-
-    &:not(:last-child) {
-      margin-right: 1.4rem;
-    }
     transition: all 0.2s;
   }
 
@@ -320,8 +320,6 @@
   display: inline-block;
   padding: 1.6rem 4rem;
   transition: all 0.2s;
-
-
 
   position: relative;
   overflow: hidden;
