--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ html {
   @media only screen and (max-width: 68.75em) {
     html {
       font-size: 60%; } }
+  @media only screen and (max-width: 31.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -161,10 +164,16 @@ body {
       @media only screen and (max-width: 56.25em) {
         .nav > *:not(:last-child) {
           border-right: 2px solid var(--color-grey-light-1); } }
+      @media only screen and (max-width: 31.25em) {
+        .nav > *:not(:last-child) {
+          border-right: 1px solid var(--color-grey-light-1); } }
     @media only screen and (max-width: 56.25em) {
       .nav > * {
         color: var(--color-grey-light-1);
         font-size: 1.4rem; } }
+    @media only screen and (max-width: 31.25em) {
+      .nav > * {
+        font-size: 1.2rem; } }
   .nav > *:hover::before {
     background-color: var(--color-primary-dark); }
 
@@ -263,6 +272,9 @@ body {
     -webkit-text-stroke: 1px var(--color-primary-light);
     -webkit-text-fill-color: transparent;
     padding: 0 2rem; }
+    @media only screen and (max-width: 56.25em) {
+      .overview__heading {
+        font-size: 3rem; } }
   .overview__stars {
     display: flex;
     align-items: center;
@@ -322,22 +334,40 @@ body {
   border-radius: 3px; }
 
 .photo-btn-1 {
-  bottom: 32rem; }
+  bottom: 35vh; }
+  @media only screen and (max-height: 31.25em) {
+    .photo-btn-1 {
+      bottom: 40vh; } }
 
 .photo-btn-2 {
-  bottom: 28rem; }
+  bottom: 30vh; }
+  @media only screen and (max-height: 31.25em) {
+    .photo-btn-2 {
+      bottom: 30vh; } }
 
 .photo-btn-3 {
-  bottom: 24rem; }
+  bottom: 25vh; }
+  @media only screen and (max-height: 31.25em) {
+    .photo-btn-3 {
+      bottom: 20vh; } }
 
 .radio-toggle-1:checked ~ .main-view {
   background-image: url("../img/tea-1.jpg"); }
+  @media only screen and (max-height: 31.25em) {
+    .radio-toggle-1:checked ~ .main-view {
+      background-position: bottom center; } }
 
 .radio-toggle-2:checked ~ .main-view {
   background-image: url("../img/tea-2.jpg"); }
+  @media only screen and (max-height: 31.25em) {
+    .radio-toggle-2:checked ~ .main-view {
+      background-position-y: 90%; } }
 
 .radio-toggle-3:checked ~ .main-view {
   background-image: url("../img/tea-3.jpg"); }
+  @media only screen and (max-height: 31.25em) {
+    .radio-toggle-3:checked ~ .main-view {
+      background-position-y: 65%; } }
 
 .radio-toggle-1:checked ~ .photo-btn-1::before {
   background-color: var(--color-primary); }
