--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ body {
   color: var(--color-grey-dark-2);
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  min-height: 100vh; }
 
 .container {
   max-width: 120rem;
@@ -97,7 +98,14 @@ body {
   background-position-x: center;
   background-position-y: center;
   min-height: 70vh;
-  transition: background-image 0.5s; }
+  transition: background-image 0.5s;
+  position: relative; }
+  @media only screen and (max-width: 37.5em) {
+    .main-view {
+      min-height: 50vh; } }
+  @media only screen and (max-width: 31.25em) {
+    .main-view {
+      min-height: 40vh; } }
 
 .overview {
   display: flex;
@@ -107,15 +115,17 @@ body {
 .detail {
   font-size: 1.5rem;
   width: 100%;
-  padding: 0 4rem; }
+  padding: 0 2rem; }
   @media only screen and (max-width: 56.25em) {
     .detail {
       padding: 3rem; } }
 
 .description {
-  padding: 3rem 2rem;
+  padding: 3rem 2rem 2rem;
+  border-bottom: 1px solid var(--color-primary);
+  margin-bottom: 2rem;
   background-color: transparent;
-  color: var(--color-grey-light-1);
+  color: var(--color-grey-light-2);
   flex: 1; }
   @media only screen and (max-width: 56.25em) {
     .description {
@@ -125,21 +135,30 @@ body {
       padding: 1rem; } }
 
 .logo {
-  width: 2rem;
-  height: 2rem;
-  fill: var(--color-primary); }
+  width: 3rem;
+  height: 3rem;
+  z-index: 1000;
+  margin-top: -0.5rem;
+  cursor: pointer; }
+
+.logo path {
+  fill: var(--color-primary-light); }
 
 .logo__title {
   margin-right: auto;
-  color: var(--color-primary);
-  margin-left: 1rem;
-  font-size: 2rem;
-  letter-spacing: 1px; }
+  color: var(--color-primary-light);
+  margin-left: 1.2rem;
+  font-size: 2.2rem;
+  letter-spacing: 1px;
+  cursor: pointer; }
 
 .nav {
   align-self: center;
   display: flex;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .nav {
+      display: none; } }
   .nav > * {
     padding: 0 2rem;
     cursor: pointer;
@@ -183,7 +202,7 @@ body {
   font-size: 1.5rem;
   list-style: none;
   letter-spacing: 1px;
-  padding: 8rem 0 0;
+  padding: 10rem 0 0;
   display: flex;
   justify-content: center; }
   @media only screen and (max-width: 68.75em) {
@@ -193,21 +212,22 @@ body {
     .side-nav {
       padding: 9rem 0 0; } }
   .side-nav__item {
-    position: relative; }
+    position: relative;
+    border-bottom: 1px solid var(--color-primary); }
   .side-nav__item::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: 1px;
     left: 0;
     height: 100%;
-    width: 3px;
+    width: 100%;
     background-color: var(--color-primary);
     transform: scaleY(0);
-    transform-origin: left;
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+    transform-origin: bottom;
+    transition: transform 250ms cubic-bezier(1, 0, 0.6, 1), background-color 0.1s; }
   .side-nav__item:hover::before, .side-nav__item--active::before {
     transform: scaleY(1);
-    width: 100%; }
+    height: 100%; }
   .side-nav__item:active::before {
     background-color: var(--color-primary-light); }
   .side-nav__link:link, .side-nav__link:visited {
@@ -231,17 +251,6 @@ body {
         flex-direction: column;
         padding: 1.5rem; } }
 
-/* -------- LEGAL TEXT ------- */
-/* ----------------------------*/
-.legal {
-  font-size: 1.2rem;
-  color: var(--color-grey-light-4);
-  text-align: center;
-  padding: 2rem; }
-  @media only screen and (max-width: 56.25em) {
-    .legal {
-      display: none; } }
-
 /* --------- Socials --------- */
 /* ----------------------------*/
 .social {
@@ -257,20 +266,22 @@ body {
     height: 2rem;
     fill: var(--color-primary);
     cursor: pointer;
+    transform: translateY(0) scale(1);
     transition: all 0.2s; }
   .social__icon:hover {
-    transform: translateY(-2px); }
+    transform: translateY(-2px) scale(1.05); }
 
+/* --------- oveview --------- */
+/* ----------------------------*/
 .overview {
   height: 7rem;
-  border-bottom: 1px solid var(--color-primary-dark); }
+  border-bottom: 1px solid var(--color-primary); }
   .overview__heading {
     font-size: 4rem;
     font-weight: bolder;
     text-transform: capitalize;
     line-height: 8rem;
-    -webkit-text-stroke: 1px var(--color-primary-light);
-    -webkit-text-fill-color: transparent;
+    color: var(--color-primary);
     padding: 0 2rem; }
     @media only screen and (max-width: 56.25em) {
       .overview__heading {
@@ -282,7 +293,7 @@ body {
   .overview__icon-star {
     width: 1.8rem;
     height: 1.8rem;
-    fill: darkgoldenrod; }
+    fill: var(--color-primary); }
     .overview__icon-star:not(:last-child) {
       margin-right: 0.4rem; }
   .overview__rating-count {
@@ -309,6 +320,8 @@ body {
     width: 1rem;
     margin-right: 0.7rem; }
 
+/* --------- Photos -------- */
+/* --------------------------*/
 .radio-icon {
   display: none; }
 
@@ -319,6 +332,7 @@ body {
   right: 2rem;
   cursor: pointer;
   color: black;
+  z-index: 1000;
   width: 1rem;
   height: 2rem; }
 
@@ -335,39 +349,44 @@ body {
 
 .photo-btn-1 {
   bottom: 35vh; }
-  @media only screen and (max-height: 31.25em) {
+  @media only screen and (max-width: 31.25em) {
     .photo-btn-1 {
-      bottom: 40vh; } }
+      bottom: 20vh; } }
 
 .photo-btn-2 {
   bottom: 30vh; }
-  @media only screen and (max-height: 31.25em) {
+  @media only screen and (max-width: 31.25em) {
     .photo-btn-2 {
-      bottom: 30vh; } }
+      bottom: 15vh; } }
 
 .photo-btn-3 {
   bottom: 25vh; }
-  @media only screen and (max-height: 31.25em) {
+  @media only screen and (max-width: 31.25em) {
     .photo-btn-3 {
-      bottom: 20vh; } }
+      bottom: 10vh; } }
 
 .radio-toggle-1:checked ~ .main-view {
   background-image: url("../img/tea-1.jpg"); }
-  @media only screen and (max-height: 31.25em) {
+  @media only screen and (max-width: 37.5em) {
     .radio-toggle-1:checked ~ .main-view {
-      background-position: bottom center; } }
+      background-position: center 100%;
+      background-size: 125%; } }
+  @media only screen and (max-width: 31.25em) {
+    .radio-toggle-1:checked ~ .main-view {
+      background-size: 155%; } }
 
 .radio-toggle-2:checked ~ .main-view {
   background-image: url("../img/tea-2.jpg"); }
-  @media only screen and (max-height: 31.25em) {
+  @media only screen and (max-width: 37.5em) {
     .radio-toggle-2:checked ~ .main-view {
-      background-position-y: 90%; } }
+      background-position-y: 100%;
+      background-size: 125%; } }
+  @media only screen and (max-width: 31.25em) {
+    .radio-toggle-2:checked ~ .main-view {
+      background-size: 155%; } }
 
 .radio-toggle-3:checked ~ .main-view {
   background-image: url("../img/tea-3.jpg"); }
-  @media only screen and (max-height: 31.25em) {
-    .radio-toggle-3:checked ~ .main-view {
-      background-position-y: 65%; } }
 
 .radio-toggle-1:checked ~ .photo-btn-1::before {
   background-color: var(--color-primary); }
@@ -382,28 +401,54 @@ body {
 /* ----------------------------*/
 .cta {
   padding: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   text-align: center; }
   @media only screen and (max-width: 56.25em) {
     .cta {
       padding: 0; } }
 
 .btn {
+  all: unset;
   font-size: 1.4rem;
-  border: none;
-  font-weight: 300;
+  font-weight: bold;
+  letter-spacing: 1px;
   text-transform: uppercase;
+  outline: none;
   border-radius: 1rem;
-  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: var(--color-grey-dark-1);
   color: #fff;
   display: inline-block;
-  padding: 1.6rem 4rem;
+  padding: 1.5rem 4rem;
   transition: all 0.2s;
   position: relative;
   overflow: hidden;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: 1; }
+  .btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary);
+    transform-origin: bottom;
+    transition: all 400ms ease;
+    z-index: -1; }
+  .btn:hover::before {
+    background-color: var(--color-primary-light); }
   .btn:hover {
-    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+    transform: translateY(-3px);
+    color: black; }
   .btn:focus {
-    outline: none;
-    animation: pulsate 1s infinite; }
+    outline: none; }
+
+/* -------- LEGAL TEXT ------- */
+/* ----------------------------*/
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-dark-1);
+  text-align: center;
+  position: absolute;
+  bottom: 2rem;
+  left: 3rem; }
