--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,16 +1,23 @@
 // logo
 .logo {
-  width: 2rem;
-  height: 2rem;
-  fill: var(--color-primary);
+  width: 3rem;
+  height: 3rem;
+  z-index: 1000;
+  margin-top: -0.5rem;
+  cursor: pointer;
+}
+
+.logo path {
+  fill: var(--color-primary-light);
 }
 
 .logo__title {
   margin-right: auto;
-  color: var(--color-primary);
-  margin-left: 1rem;
-  font-size: 2rem;
+  color: var(--color-primary-light);
+  margin-left: 1.2rem;
+  font-size: 2.2rem;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 // visible nav
@@ -18,6 +25,10 @@
   align-self: center;
   display: flex;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest) {
+    display: none;
+  }
 
   & > * {
     padding: 0 2rem;
@@ -75,7 +86,7 @@
   font-size: 1.5rem;
   list-style: none;
   letter-spacing: 1px;
-  padding: 8rem 0 0;
+  padding: 10rem 0 0;
   display: flex;
   justify-content: center;
 
@@ -89,26 +100,27 @@
 
   &__item {
     position: relative;
+    border-bottom: 1px solid var(--color-primary);
   }
 
   &__item::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: 1px;
     left: 0;
     height: 100%;
-    width: 3px;
+    width: 100%;
     background-color: var(--color-primary);
     transform: scaleY(0);
-    transform-origin: left;
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+    transform-origin: bottom;
+    transition: transform 250ms cubic-bezier(1, 0, 0.6, 1),
       background-color 0.1s;
   }
 
   &__item:hover::before,
   &__item--active::before {
     transform: scaleY(1);
-    width: 100%;
+    height: 100%;
   }
 
   &__item:active::before {
@@ -143,19 +155,6 @@
   }
 }
 
-/* -------- LEGAL TEXT ------- */
-/* ----------------------------*/
-.legal {
-  font-size: 1.2rem;
-  color: var(--color-grey-light-4);
-  text-align: center;
-  padding: 2rem;
-
-  @media only screen and (max-width: $bp-medium) {
-    display: none;
-  }
-}
-
 /* --------- Socials --------- */
 /* ----------------------------*/
 .social {
@@ -174,25 +173,27 @@
     height: 2rem;
     fill: var(--color-primary);
     cursor: pointer;
+    transform: translateY(0) scale(1);
     transition: all 0.2s;
   }
 
   &__icon:hover {
-    transform: translateY(-2px);
+    transform: translateY(-2px) scale(1.05);
   }
 }
 
+/* --------- oveview --------- */
+/* ----------------------------*/
 .overview {
   height: 7rem;
-  border-bottom: 1px solid var(--color-primary-dark);
+  border-bottom: 1px solid var(--color-primary);
 
   &__heading {
     font-size: 4rem;
     font-weight: bolder;
     text-transform: capitalize;
     line-height: 8rem;
-    -webkit-text-stroke: 1px var(--color-primary-light);
-    -webkit-text-fill-color: transparent;
+    color: var(--color-primary);
     padding: 0 2rem;
 
     @media only screen and (max-width: $bp-medium) {
@@ -209,7 +210,7 @@
   &__icon-star {
     width: 1.8rem;
     height: 1.8rem;
-    fill: darkgoldenrod;
+    fill: var(--color-primary);
 
     &:not(:last-child) {
       margin-right: 0.4rem;
@@ -225,6 +226,7 @@
 
 /* --------- DETAIL -------- */
 /* --------------------------*/
+
 .list {
   list-style: none;
   margin: 3rem 0 0;
@@ -248,7 +250,8 @@
   }
 }
 
-// photo toggle
+/* --------- Photos -------- */
+/* --------------------------*/
 .radio-icon {
   display: none;
 }
@@ -259,6 +262,7 @@
   right: 2rem;
   cursor: pointer;
   color: black;
+  z-index: 1000;
 
   width: 1rem;
   height: 2rem;
@@ -277,39 +281,44 @@
 }
 .photo-btn-1 {
   bottom: 35vh;
-  @media only screen and (max-height: $bp-smallest) {
-    bottom: 40vh;
+  @media only screen and (max-width: $bp-smallest) {
+    bottom: 20vh;
   }
 }
 .photo-btn-2 {
   bottom: 30vh;
-  @media only screen and (max-height: $bp-smallest) {
-    bottom: 30vh;
+  @media only screen and (max-width: $bp-smallest) {
+    bottom: 15vh;
   }
 }
 .photo-btn-3 {
   bottom: 25vh;
-  @media only screen and (max-height: $bp-smallest) {
-    bottom: 20vh;
+  @media only screen and (max-width: $bp-smallest) {
+    bottom: 10vh;
   }
 }
 .radio-toggle-1:checked ~ .main-view {
   background-image: url('../img/tea-1.jpg');
-  @media only screen and (max-height: $bp-smallest) {
-    background-position: bottom center;
+  @media only screen and (max-width: $bp-small) {
+    background-position: center 100%;
+    background-size: 125%;
+  }
+  @media only screen and (max-width: $bp-smallest) {
+    background-size: 155%;
   }
 }
 .radio-toggle-2:checked ~ .main-view {
   background-image: url('../img/tea-2.jpg');
-  @media only screen and (max-height: $bp-smallest) {
-    background-position-y: 90%;
+  @media only screen and (max-width: $bp-small) {
+    background-position-y: 100%;
+    background-size: 125%;
+  }
+  @media only screen and (max-width: $bp-smallest) {
+    background-size: 155%;
   }
 }
 .radio-toggle-3:checked ~ .main-view {
   background-image: url('../img/tea-3.jpg');
-  @media only screen and (max-height: $bp-smallest) {
-    background-position-y: 65%;
-  }
 }
 
 .radio-toggle-1:checked ~ .photo-btn-1::before {
@@ -326,7 +335,7 @@
 /* ----------------------------*/
 .cta {
   padding: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   text-align: center;
 
   @media only screen and (max-width: $bp-medium) {
@@ -335,36 +344,62 @@
 }
 
 .btn {
+  all: unset;
   font-size: 1.4rem;
-  border: none;
-  font-weight: 300;
+  font-weight: bold;
+  letter-spacing: 1px;
   text-transform: uppercase;
+
+  outline: none;
   border-radius: 1rem;
-  background-image: linear-gradient(
-    to right,
-    var(--color-primary-light),
-    var(--color-primary-dark)
-  );
+  color: var(--color-grey-dark-1);
   color: #fff;
 
   display: inline-block;
-  padding: 1.6rem 4rem;
+  padding: 1.5rem 4rem;
   transition: all 0.2s;
 
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  z-index: 1;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary);
+
+    transform-origin: bottom;
+    transition: all 400ms ease;
+    z-index: -1;
+  }
+
+  &:hover::before {
+    background-color: var(--color-primary-light);
+  }
 
   &:hover {
-    background-image: linear-gradient(
-      to left,
-      var(--color-primary-light),
-      var(--color-primary-dark)
-    );
+    transform: translateY(-3px);
+    color: black;
   }
 
   &:focus {
     outline: none;
-    animation: pulsate 1s infinite;
   }
+}
+
+/* -------- LEGAL TEXT ------- */
+/* ----------------------------*/
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-dark-1);
+  text-align: center;
+
+  position: absolute;
+  bottom: 2rem;
+  left: 3rem;
 }
