--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -65,6 +65,15 @@
   background-position-y: center;
   min-height: 70vh;
   transition: background-image 0.5s;
+  position: relative;
+
+  @media only screen and (max-width: $bp-small) {
+    min-height: 50vh;
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    min-height: 40vh;
+  }
 }
 
 .overview {
@@ -76,7 +85,7 @@
 .detail {
   font-size: 1.5rem;
   width: 100%;
-  padding: 0 4rem;
+  padding: 0 2rem;
 
   @media only screen and (max-width: $bp-medium) {
     padding: 3rem;
@@ -84,9 +93,11 @@
 }
 
 .description {
-  padding: 3rem 2rem;
+  padding: 3rem 2rem 2rem;
+  border-bottom: 1px solid var(--color-primary);
+  margin-bottom: 2rem;
   background-color: transparent;
-  color: var(--color-grey-light-1);
+  color: var(--color-grey-light-2);
   flex: 1;
 
   @media only screen and (max-width: $bp-medium) {
